[gd_scene load_steps=4 format=3 uid="uid://cl68c8g6fj5cr"]

[ext_resource type="Script" uid="uid://cixr66cmv1bew" path="res://Scripts/game_over.gd" id="1_ek8ke"]
[ext_resource type="FontFile" uid="uid://dalj3asj0d324" path="res://Assets/fonts/PixelOperator8-Bold.ttf" id="2_eoghk"]
[ext_resource type="FontFile" uid="uid://0fn4even71bp" path="res://Assets/fonts/PixelOperator8.ttf" id="3_14u15"]

[node name="GameOver" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_ek8ke")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.039215688, 0.039215688, 0.039215688, 0.3137255)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -100.0
offset_right = 200.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Title" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.48452926, 0.48452926, 1)
theme_override_fonts/font = ExtResource("2_eoghk")
theme_override_font_sizes/font_size = 48
text = "YOU DIED"
horizontal_alignment = 1

[node name="PlayAgainButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_14u15")
theme_override_font_sizes/font_size = 24
text = "Play Again"

[node name="QuitButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_14u15")
theme_override_font_sizes/font_size = 24
text = "Quit"

[connection signal="pressed" from="VBoxContainer/PlayAgainButton" to="." method="_on_play_again_button_pressed"]
[connection signal="pressed" from="VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
